# DocuQuery-dev

./: .gitignore  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: analysis.py  auth.py  documents.py  health.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  analysis.py  base.py  document.py  user.py
backend/app/schemas/: analysis.py  auth.py  common.py  document.py
backend/app/services/: analyzer.py  parser.py  storage.py  tips.py  user_service.py
backend/app/utils/: file_validation.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_analysis.py  test_auth.py  test_documents.py  test_health.py
backend/tests/fixtures/: sample.txt
backend/tests/services/: test_analyzer.py  test_analyzer_schemas.py  test_parser.py  test_storage.py  test_tips.py
backend/tests/utils/: test_file_validation.py
docs/: ARCHITECTURE.md  PRD.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: analysis.spec.ts  auth.spec.ts  documents.spec.ts  responsive.spec.ts
frontend/e2e/fixtures/: sample.txt
frontend/e2e/helpers/: auth.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: use-analysis.ts  use-auth.ts  use-dashboard.ts  use-documents.ts
frontend/src/lib/: analysis.ts  api-client.ts  auth.ts  (+2 more)
(+28 files in other folders)
